Adjust ConnectionString Name

--- a/EasyTax.Service/appsettings.json
+++ b/EasyTax.Service/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProjectContext": "Server=(localdb)\\ProjectModels;Database=EasyTax;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TaxContext": "Server=(localdb)\\ProjectModels;Database=EasyTax;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
